<resources>
    <string name="app_name">灯语</string>

    <string name="login">登录</string>
    <string name="logon">注册</string>
    <string name="logoff">注销</string>
    <string name="device_name">设备名</string>
    <string name="device_address">设备地址</string>
    <string name="time">时间</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string name="bluetooth">蓝牙</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">扫描</string>
    <string name="button_cancel">取消</string>
    <string name="none_found">未发现可用设备</string>
    <string name="scanning">正在扫描...</string>
    <string name="select_device">选择设备</string>
    <string name="connect_successful">设备连接成功</string>
    <string name="connect_bad">设备连接失败</string>
    <string name="bt_enabled_leaving">蓝牙已打开!</string>
    <string name="bt_not_enabled_leaving">蓝牙未打开！</string>

    <string name="nav_states">状态</string>
    <string name="nav_profile">我的</string>

    <string name="str_recorder_voice">直接 说话</string>
    <string name="str_recorder_normal">按住 说活</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="str_dialog_recording">手指上滑，取消发送</string>
    <string name="str_dialog_want_to_cancel">松开手指，取消发送</string>
    <string name="str_dialog_too_short">录音时间过短</string>


    <string name="account_later">游客模式</string>
    <string name="logo_text">L</string>
    <string name="log_out">注销</string>
    <string name="log_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="or">OR</string>
    <string name="username">用户名</string>
    <string name="submit">提交</string>
    <string name="password">密码</string>
    <string name="password_forget">忘记密码?</string>
    <string name="password_again">确认密码</string>
    <string name="error_invalid_password">密码大于4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="ensure_log_out">确定注销？</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
</resources>
