<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/contacts_head"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:src="@drawable/icon"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contacts_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:layout_marginTop="14dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/contacts_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_address"
                android:layout_marginTop="8dp"
                android:textSize="14dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/contacts_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/time"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>